docs: fix scrollbar style for dark mode

--- a/docs/src/assets/scss/components/toc.scss
+++ b/docs/src/assets/scss/components/toc.scss
@@ -21,6 +21,7 @@
 .docs-aside {
     // for sticky table of contents in sidebar
     .docs-toc.c-toc {
+        background-color: var(--body-background-color);
         @media all and (min-width: 1400px) {
             position: sticky;
             top: 20px;
